--- a/example-smart-app/launch-patient.html
+++ b/example-smart-app/launch-patient.html
@@ -26,7 +26,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': 'CLIENT_ID_HERE',
+        'client_id': 'efb14f45-4357-4c4e-99d4-16dab2d852de',
         'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile'
       });
     </script>
